--- a/seminario/seminario.qmd
+++ b/seminario/seminario.qmd
@@ -30,7 +30,7 @@ Desenvolver uma nova metodologia para estimar características de desemprego ou 
 
 - Nesse artigo, os autores estudam métodos para obter estimativas mais precisas para os índices de desemprego, emprego e inatividade no Reino Unido;
 - Intuitivamente, a ideia é aproximar as estimativas de distritos que sejam parecidos por meio de um modelo de regressão;
-- As estimativas serão viesadas, porém suas variâncias pode ser substancialmente menor.
+- As estimativas serão viesadas, porém suas variâncias pode ser substancialmente menor;
 
 ## Variáveis 
 
@@ -55,12 +55,19 @@ Modelo logit multinomial com efeitos aleatórios de _área_.
 $$
 f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{di3}!} \cdot p_{di1}^{y_{di1}} \cdot p_{di2}^{y_{di2}} \cdot p_{di3}^{y_{di3}}
 $$
+$$
+\log{(p_{dij}/p_{di3})} = x_{di}\beta_j + u_d, \qquad j=1,2 \qquad i = 1,\dots ,6 \qquad d = 1,\dots,406
+$$
+$$
+u_d \stackrel{iid}{\sim} N(0,\varphi)
+$$
 
 ::: {style="font-size: 60%;"}
 
-- $x_{di}$, $y_{di1}$, $y_{di2}$ e $y_{di3}$ denotam o número de desempregados, empregados e inativos amostrados, respectivamente.
+- $y_{di1}$, $y_{di2}$ e $y_{di3}$ denotam o número de desempregados, empregados e inativos amostrados, respectivamente.
 - $m_{di} = y_{di1} + y_{di2} + y_{di3}$ representa o tamanho da amostra.
-- $p_{di1}, p_{di2}, p_{di3} = 1 − p_{di1} − p_{di2}$ são as probabilidades respectivas de indivíduos desempregados, empregados e inativos.
+- $p_{di1}, p_{di2}, p_{di3}$ são as probabilidades respectivas de indivíduos desempregados, empregados e inativos. $\left(\sum_j p_{dij} = 1\right)$
+- $x_{di}$ são as variáveis explicativas
 
 :::
 
