--- a/seminario/seminario.qmd
+++ b/seminario/seminario.qmd
@@ -50,19 +50,22 @@ Desenvolver uma nova metodologia para estimar características de desemprego ou 
 
 ## Modelo
 
+::: {style="font-size: 60%;"}
+
 Modelo logit multinomial com efeitos aleatórios de _área_.
+
+:::
 
 $$
 f(y_{di1}, y_{di2} \mid u_d) = \frac{m_{di}!}{y_{di1}! \cdot y_{di2}! \cdot y_{di3}!} \cdot p_{di1}^{y_{di1}} \cdot p_{di2}^{y_{di2}} \cdot p_{di3}^{y_{di3}}
 $$
 $$
-\log{(p_{dij}/p_{di3})} = x_{di}\beta_j + u_d, \qquad j=1,2 \qquad i = 1,\dots ,6 \qquad d = 1,\dots,406
-$$
-$$
-u_d \stackrel{iid}{\sim} N(0,\varphi)
+\log{(p_{dij}/p_{di3})} = x_{di}\beta_j + u_d, 
 $$
 
 ::: {style="font-size: 60%;"}
+
+$j=1,2 \qquad i = 1,\dots ,6 \qquad d = 1,\dots,406, u_d \stackrel{iid}{\sim} N(0,\varphi)$
 
 - $y_{di1}$, $y_{di2}$ e $y_{di3}$ denotam o número de desempregados, empregados e inativos amostrados, respectivamente.
 - $m_{di} = y_{di1} + y_{di2} + y_{di3}$ representa o tamanho da amostra.
@@ -104,15 +107,63 @@ $$
 
 Experimento de simulação com dois objetivos principais:
 
-- Comparação de taxas de desemprego estimadas pelo modelo misto logit multinomial com aquelas obtidas pelo modelo logit misto univariado para desempregados
+- Comparação de taxas de desemprego estimadas pelo modelo misto logit multinomial com as estimativas obtidas pelo modelo logit misto univariado para desempregados
 - Comparação de desempenho de duas estimativas diferentes do erro quadrático médio propostas
+
+## Simulação
+
+Comparação entre modelos
+
+1. Modelo misto logit multinomial
+$$
+\log\left(\frac{p_{dij}}{p_{di3}}\right) = x_{di}\boldsymbol{\beta}_j + u_d,
+$$
+
+::: {style="font-size: 60%;"}
+
+$j = 1, 2 \qquad i = 1, ..., 6 \qquad d = 1, ..., 406$
+
+:::
+
+2. Modelo misto logit univariado para desempregados
+$$
+\log\left\{\frac{p_{di1}}{1 - p_{di1}}\right\} = x_{di}\boldsymbol{\beta} + u_d.
+$$
+
+## Simulação
 
 Os dados simulados (K = 1000 populações, D = 200 áreas) foram gerados utilizando os parâmetros ajustados para os dados reais.
 
 ## Simulação
 
-![Valores empíricos do erro quadrático médio segundo os modelos multinomial e binomial](img/mse.001.jpeg)
+![Valores empíricos do erro quadrático médio segundo os modelos multinomial e binomial em escala logarítmica](img/mse.001.jpeg)
+
+## Simulação
+
+- O MSE do modelo multinomial é consideravelmente menor
+- O modelo univariado não leva em conta a dependência entre o número de pessoas empregadas, desempregadas e inativas no processo de estimação.
+
+----
 
 ## Conclusão
 
+- Foi proposto um modelo logit multinomial com efeitos aleatórios para modelar dados de emprego ou desemprego, e estimadores de pequenas áreas foram derivados a partir dele
+- As estimativas obtidas são consistentes, pois estão dentro do espaço desejado, ou seja, a soma dos totais estimados de desempregados, empregados e inativos equivale ao total da população
+- Em comparação com estimadores diretos, essas estimativas apresentam uma variância reduzida sem um viés significativo
 
+## Conclusão
+
+Duas formas distintas de estimar o erro quadrático médio dos estimadores de pequenas áreas propostos:
+
+### 1. Expressão Analítica
+
+- Baseada em linearizações de Taylor específicas para o modelo e o parâmetro em questão
+- Proporciona uma abordagem analítica para avaliar o erro médio quadrático
+
+## Conclusão
+
+### 2. Estimador Bootstrap
+
+- Desenvolvido para o modelo logit multinomial, evitando linearizações
+- Pode ser facilmente adaptado a variações no modelo e em diferentes parâmetros-alvo
+- Demonstra melhor desempenho em comparação com o estimador analítico em simulações
