--- a/seminario/seminario.qmd
+++ b/seminario/seminario.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Estimação de pequenos domínios com modelo misto multinomial"
 subtitle: "MAE5896 - Modelos Mistos e suas Aplicações - 2023"
+author: Pedro Tótolo, Renata Hirota, Thais Domingues
 format: 
   revealjs:
     theme: solarized
